Add RoundEvent to ark-lib so that bark can also use it
I'm aware I removed some round_id checks, they are to be replaced
in follow-up work.

--- a/aspd-rpc/Cargo.toml
+++ b/aspd-rpc/Cargo.toml
@@ -12,6 +12,7 @@ server = []
 [dependencies]
 # OWN
 ark-lib = { path = "../ark-lib" }
+bitcoin.workspace = true
 
 # EXPORTED
 tonic.workspace = true
