--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,10 @@ hex = "=0.4.3"
 clap = { version = "4.4.18", features = [ "derive", "env" ] }
 chrono = { version = "0.4", features = [ "serde" ] }
 serde_json = { version = "1", features = [ "raw_value" ] }
+toml = "0.8.19"
 ciborium = "0.2.1"
+config = "0.15.6"
+humantime = "2.1.0"
 # async + gRPC stack
 tonic-build = "0.12.2"
 prost = "0.13.2"
