--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -26,6 +26,7 @@ anyhow.workspace = true
 lazy_static.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+toml.workspace = true
 bitcoin.workspace = true
 bdk_esplora.workspace = true
 hex.workspace = true
