--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -43,6 +43,9 @@ clap.workspace = true
 futures.workspace = true
 serde_json.workspace = true
 ciborium.workspace = true
+config.workspace = true
+toml.workspace = true
+humantime.workspace = true
 
 bip39.workspace = true
 bdk_wallet.workspace = true
