aspd: migrate to Postgres database

--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -34,7 +34,10 @@ serde.workspace = true
 log.workspace = true
 
 # INTERNAL
-rocksdb = "0.22.0"
+tokio-postgres.workspace = true
+bb8.workspace = true
+bb8-postgres.workspace = true
+refinery = { version = "0.8.14", features = ["tokio-postgres"] }
 
 lazy_static.workspace = true
 fern.workspace = true
