--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,9 @@ tonic-build = "0.12.2"
 prost = "0.13.2"
 tokio = { version = "1.35", features = [ "full" ] }
 tokio-stream = { version = "0.1.14", features = [ "sync" ] }
+tokio-postgres = "0.7.12"
+bb8 = "0.9.0"
+bb8-postgres = "0.9.0"
 futures = {version = "0.3.30"}
 # bitcoin
 bip39 = { version = "2.0.0", features = [ "rand", "serde" ] }
