--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -48,7 +48,16 @@ bip39.workspace = true
 bdk_wallet.workspace = true
 bdk_bitcoind_rpc.workspace = true
 
-prost.workspace = true
 tonic.workspace = true
+tower.workspace = true
+http.workspace = true
+http-body.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
+opentelemetry.workspace = true
+opentelemetry-otlp.workspace = true
+opentelemetry_sdk.workspace = true
+opentelemetry-semantic-conventions.workspace = true
+tracing-opentelemetry.workspace = true
+tracing-subscriber.workspace = true
+tracing.workspace = true
