--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -61,3 +61,6 @@ opentelemetry-semantic-conventions.workspace = true
 tracing-opentelemetry.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
+
+[profile.release]
+debug = true
