--- a/.woodpecker/tests.yaml
+++ b/.woodpecker/tests.yaml
@@ -30,19 +30,19 @@ steps:
         from_secret: github-mirror-push-key
 
   - name: prechecks
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     commands:
       - just prechecks
 
   - name: check-commits
     depends_on: prechecks
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     commands:
       - just check-commits
 
   - name: test-unit
     depends_on: check-commits
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     commands:
       - git log --oneline | head -n 1
       - cargo test --workspace --exclude ark-testing --target-dir ./target-unit
@@ -51,13 +51,13 @@ steps:
     when:
       - event: tag
     depends_on: check-commits
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     commands:
       - bash ./contrib/check-versions.sh
 
   - name: build
     depends_on: check-commits
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     commands:
       - git log --oneline | head -n 1
       - cargo version
@@ -66,7 +66,7 @@ steps:
 
   - name: aspd-default-config-file
     depends_on: build
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     commands:
       - git log --oneline | head -n 1
       - just default-aspd-config
@@ -78,7 +78,7 @@ steps:
         branch: master
     depends_on: build
     failure: ignore
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     volumes:
       - /data:/host/data
     commands:
@@ -88,7 +88,7 @@ steps:
 
   - name: use-bark-as-dependency
     depends_on: build
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     commands:
       - git log --oneline | head -n 1
       - cargo init barktest && cd barktest
@@ -98,21 +98,25 @@ steps:
 
   - name: test-integration-btc28.0
     depends_on: build
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     environment:
       BITCOIND_EXEC: /bitcoin/28.0/bin/bitcoind
       LIGHTNINGD_EXEC: /lightning/24.08.2/bin/lightningd
+      USE_GLOBAL_DATABASE: true
+      TEST_DIRECTORY: ./test/btc28
+      PGPASSWORD: postgres
     commands:
       - git log --oneline | head -n 1
       - export ASPD_EXEC=$CI_WORKSPACE/target/debug/aspd
       - export BARK_EXEC=$CI_WORKSPACE/target/debug/bark
       - ls -al $${BITCOIND_EXEC}
       - ls -al $${LIGHTNINGD_EXEC}
-      - TEST_DIRECTORY=./test/btc28 cargo test --package ark-testing
+      - service postgresql start
+      - cargo test --package ark-testing
 
   - name: test-integration-esplora
     depends_on: build
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     environment:
       BITCOIND_EXEC: /bitcoin/28.0/bin/bitcoind
       LIGHTNINGD_EXEC: /lightning/24.08.2/bin/lightningd
@@ -120,12 +124,17 @@ steps:
       CHAIN_SOURCE: esplora
       # It's unclear why but using too many threads causes bitcoind and bark instances to fail when launching
       MAX_THREADS: 4
+      TEST_DIRECTORY: ./test/esplora
+      # postgres
+      USE_GLOBAL_DATABASE: true
+      PGPASSWORD: postgres
     commands:
       - git log --oneline | head -n 1
       - export ASPD_EXEC=$CI_WORKSPACE/target/debug/aspd
       - export BARK_EXEC=$CI_WORKSPACE/target/debug/bark
       - ls -al $${ELECTRS_EXEC}
-      - TEST_DIRECTORY=./test/esplora cargo test --package ark-testing -- --skip exit --test-threads=$${MAX_THREADS}
+      - service postgresql start
+      - cargo test --package ark-testing -- --skip exit --test-threads=$${MAX_THREADS}
 
 # Parse version from tag
   - name: parse-versions
@@ -137,7 +146,7 @@ steps:
       - event: tag
         ref: refs/tags/all-*
     depends_on: check-versions
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     commands:
       - bash ./contrib/parse-versions.sh "${CI_COMMIT_TAG}" > VERSION
       - cat VERSION
@@ -148,7 +157,7 @@ steps:
       - event: tag
         ref: refs/tags/aspd-*
     depends_on: parse-versions
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     commands:
       - cat VERSION
       - just release-aspd
@@ -175,7 +184,7 @@ steps:
       - event: tag
         ref: refs/tags/bark-*
     depends_on: parse-versions
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     environment:
       SDKROOT: /usr/local/osxcross/SDK/MacOSX15.1.sdk
     commands:
@@ -213,7 +222,7 @@ steps:
       - event: tag
         ref: refs/tags/all-*
     depends_on: parse-versions
-    image: registry.2nd.dev/build:7
+    image: registry.2nd.dev/build:10
     environment:
       SDKROOT: /usr/local/osxcross/SDK/MacOSX15.1.sdk
     commands:
