--- a/aspd/config.default.toml
+++ b/aspd/config.default.toml
@@ -13,6 +13,7 @@ sweep_tx_fallback_feerate = "2500sat/kwu"
 round_sweep_interval = "1h"
 round_onboard_confirmations = 12
 sweep_threshold = 1000000
+rpc_rich_errors = true
 
 [rpc]
 public_address = "127.0.0.1:3535"
