--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -28,6 +28,7 @@ serde.workspace = true
 serde_json.workspace = true
 toml.workspace = true
 bitcoin.workspace = true
+bip39.workspace = true
 bdk_esplora.workspace = true
 hex.workspace = true
 log.workspace = true
