--- a/.woodpecker/tests.yaml
+++ b/.woodpecker/tests.yaml
@@ -53,7 +53,7 @@ steps:
     depends_on: check-commits
     image: registry.2nd.dev/build:10
     commands:
-      - bash ./contrib/check-versions.sh
+      - bash ./contrib/check-versions.sh "${CI_COMMIT_TAG}"
 
   - name: build
     depends_on: check-commits
@@ -84,7 +84,7 @@ steps:
     commands:
       - just rustdocs
       - cp -r rustdocs /host/data/
-      - bash contrib/generate-index.sh
+      - bash contrib/generate-index.sh /host/data/rustdocs/doc
 
   - name: use-bark-as-dependency
     depends_on: build
