--- a/.woodpecker/tests.yaml
+++ b/.woodpecker/tests.yaml
@@ -102,9 +102,8 @@ steps:
     environment:
       BITCOIND_EXEC: /bitcoin/28.0/bin/bitcoind
       LIGHTNINGD_EXEC: /lightning/24.08.2/bin/lightningd
-      USE_GLOBAL_DATABASE: true
       TEST_DIRECTORY: ./test/btc28
-      PGPASSWORD: postgres
+      TEST_POSTGRES_HOST: localhost
     commands:
       - git log --oneline | head -n 1
       - export ASPD_EXEC=$CI_WORKSPACE/target/debug/aspd
@@ -125,9 +124,7 @@ steps:
       # It's unclear why but using too many threads causes bitcoind and bark instances to fail when launching
       MAX_THREADS: 4
       TEST_DIRECTORY: ./test/esplora
-      # postgres
-      USE_GLOBAL_DATABASE: true
-      PGPASSWORD: postgres
+      TEST_POSTGRES_HOST: localhost
     commands:
       - git log --oneline | head -n 1
       - export ASPD_EXEC=$CI_WORKSPACE/target/debug/aspd
