Add trace_id to aspd-log.

--- a/aspd-log/Cargo.toml
+++ b/aspd-log/Cargo.toml
@@ -16,3 +16,7 @@ chrono.workspace = true
 
 bdk_wallet.workspace = true
 bitcoin.workspace = true
+
+tracing.workspace = true
+opentelemetry.workspace = true
+tracing-opentelemetry.workspace = true
