--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -14,8 +14,8 @@ aspd-rpc = { path = "../aspd-rpc", features = ["server"] }
 bark-cln = { path = "../bark-cln"}
 bark-json = { path = "../bark-json"}
 bark-client = { path = "../bark" } 
+bark-bitcoin-ext = { path = "../bitcoin-ext" }
 
-async-trait = "0.1.83"
 bitcoincore-rpc = "0.19.0"
 portpicker = "0.1.1"
 regex = "1.10.5"
@@ -40,4 +40,5 @@ tokio.workspace = true
 tokio-stream.workspace = true
 tonic.workspace = true
 futures.workspace = true
+async-trait.workspace = true
 tokio-postgres.workspace = true
