--- a/bark/Cargo.toml
+++ b/bark/Cargo.toml
@@ -44,6 +44,7 @@ chrono.workspace = true
 clap.workspace = true
 serde_json.workspace = true
 ciborium.workspace = true
+humantime.workspace = true
 
 bip39.workspace = true
 miniscript.workspace = true
