--- a/aspd-log/Cargo.toml
+++ b/aspd-log/Cargo.toml
@@ -13,6 +13,7 @@ log.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 chrono.workspace = true
+humantime.workspace = true
 
 bdk_wallet.workspace = true
 bitcoin.workspace = true
