--- a/ark-testing/Cargo.toml
+++ b/ark-testing/Cargo.toml
@@ -19,7 +19,7 @@ bark-bitcoin-ext = { path = "../bitcoin-ext" }
 bitcoincore-rpc = "0.19.0"
 portpicker = "0.1.1"
 regex = "1.10.5"
-users = "0.11"
+libc = "0.2"
 which = "6.0.1"
 nix = { version = "0.29", features = [ "signal" ] }
 
