cln: add holdinvoice plugin grpc client protos

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 aspd-rpc/src/aspd.rs linguist-generated=true
 cln-rpc/src/cln.rs linguist-generated=true
+cln-rpc/src/plugins/hold.rs linguist-generated=true
