--- a/aspd/config.default.toml
+++ b/aspd/config.default.toml
@@ -21,6 +21,7 @@ invoice_recheck_delay = "2s"
 invoice_check_base_delay = "10s"
 invoice_check_max_delay = "10m"
 invoice_poll_interval = "30s"
+htlc_subscription_timeout = "10m"
 legacy_wallet = false
 
 [vtxo_sweeper]
