--- a/aspd/Cargo.toml
+++ b/aspd/Cargo.toml
@@ -61,6 +61,7 @@ tower.workspace = true
 http.workspace = true
 http-body.workspace = true
 tokio.workspace = true
+tokio-util.workspace = true
 tokio-stream.workspace = true
 opentelemetry.workspace = true
 opentelemetry-otlp.workspace = true
