Unify DEEPLY_CONFIRMED constants to 100 and move BlockHeight & BlockRef

--- a/aspd-log/Cargo.toml
+++ b/aspd-log/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 # OWN
 ark-lib = { path = "../ark-lib" }
+bark-bitcoin-ext = { path = "../bitcoin-ext", default-features = false }
 
 log.workspace = true
 serde.workspace = true
