aspd: Add PersistedWallet for more control over BDK's wallet

--- a/aspd/config.default.toml
+++ b/aspd/config.default.toml
@@ -15,6 +15,7 @@ round_sweep_interval = "1h"
 sweep_threshold = 1000000
 rpc_rich_errors = true
 txindex_check_interval = "30s"
+legacy_wallet = false
 
 [rpc]
 public_address = "127.0.0.1:3535"
