--- a/bark-cln/Cargo.toml
+++ b/bark-cln/Cargo.toml
@@ -1,17 +1,14 @@
 [package]
-name = "bark-cln"
+name = "bark-cln-rpc"
 version = "0.0.0"
 edition = "2021"
+
+[lib]
+name = "cln_rpc"
 
 [dependencies]
 ark-lib = { path = "../ark-lib" }
 bitcoin.workspace = true
-anyhow.workspace = true
-hex.workspace = true
-futures.workspace = true
-log.workspace = true
-tokio.workspace = true
-tokio-util.workspace = true
 tonic.workspace = true
 prost.workspace = true
 
