Move bark-cln dir to cln-rpc

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 aspd-rpc/src/aspd.rs linguist-generated=true
-bark-cln/src/cln.rs linguist-generated=true
+cln-rpc/src/cln.rs linguist-generated=true
