CI: Add libsodium to docker image
Without libsodium `lightningd` refuses to run.

--- a/.woodpecker/images/tests/Dockerfile
+++ b/.woodpecker/images/tests/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 	make \
 	pkg-config \
 	ripgrep \
+	libsodium-dev \
 	libssl-dev \
 	libclang-dev \
 	libsqlite3-dev \
